--- a/src/views/includes/misc/_scroll-down.pug
+++ b/src/views/includes/misc/_scroll-down.pug
@@ -1,5 +1,6 @@
 //- includes/misc/_scroll-down.pug
 .scroll-down
   //- .scroller-text scroll down
-  .scroll-down-icon(aria-label="Scroll down")
-    i.fas.fa-chevron-down.scroll
+  .scroll-down-icon.scroll(aria-label="Scroll down")
+    //- i.fas.fa-chevron-down
+    img.svg-inline--fa#fa-chevron-down(src="fonts/svgs/solid/chevron-down.svg" alt="Down" inline)
