--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -12,10 +12,12 @@ section.portfolio#portfolio-1
         p.mb-4.font-weight-bold #node #yarn #git #gulp #scss #es6 #pug
         .buttons-wrapper
           a.btn.btn-info.mr-2(href="#")
-            i.fas.fa-external-link-alt.mr-2
+            //- i.fas.fa-external-link-alt.mr-2
+            img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
           a.btn.btn-light(href="#")
-            i.fab.fa-github.mr-2
+            //- i.fab.fa-github.mr-2
+            img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
             span.font-weight-bold GitHub
 
 section.portfolio#portfolio-2
@@ -29,10 +31,12 @@ section.portfolio#portfolio-2
         p.mb-4.font-weight-bold #devices #take #screenshots #photo
         .buttons-wrapper
           a.btn.btn-info.mr-2(href="https://res.adorade.ro" rel="noopener" target="_blank")
-            i.fas.fa-external-link-alt.mr-2
+            //- i.fas.fa-external-link-alt.mr-2
+            img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
           a.btn.btn-light(href="https://github.com/adorade/respo" rel="noopener" target="_blank")
-            i.fab.fa-github.mr-2
+            //- i.fab.fa-github.mr-2
+            img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
             span.font-weight-bold GitHub
 
 section.portfolio#portfolio-3
@@ -46,10 +50,12 @@ section.portfolio#portfolio-3
         p.mb-4.font-weight-bold #wordpress #themes #plugins #cms
         .buttons-wrapper
           a.btn.btn-info.mr-2(href="#")
-            i.fas.fa-external-link-alt.mr-2
+            //- i.fas.fa-external-link-alt.mr-2
+            img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
           //- a.btn.btn-light(href="#")
-          //-   i.fab.fa-github.mr-2
+          //-   //- i.fab.fa-github.mr-2
+          //-   img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
           //-   span.font-weight-bold GitHub
           span.font-weight-bold Coming soon!
 
@@ -64,8 +70,10 @@ section.portfolio#portfolio-4
         p.mb-4.font-weight-bold #time #tasks #get #done
         .buttons-wrapper
           a.btn.btn-info.mr-2(href="https://timero.adorade.ro" rel="noopener" target="_blank")
-            i.fas.fa-external-link-alt.mr-2
+            //- i.fas.fa-external-link-alt.mr-2
+            img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
           a.btn.btn-light(href="https://github.com/adorade/timero" rel="noopener" target="_blank")
-            i.fab.fa-github.mr-2
+            //- i.fab.fa-github.mr-2
+            img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
             span.font-weight-bold GitHub
