--- a/src/views/includes/sections/_features.pug
+++ b/src/views/includes/sections/_features.pug
@@ -9,7 +9,8 @@ section.features.text-center#features
       .col-12.col-sm-6.col-lg-4
         .card.card-orange
           .card-img
-            i.fas.fa-tachometer-alt.fa-5x
+            //- i.fas.fa-tachometer-alt.fa-5x
+            img.svg-inline--fa.fa-5x#fa-tachometer-alt(src="fonts/svgs/solid/tachometer-alt.svg" alt="tachometer-alt" inline)
           .card-body
             h4.card-title Performance
             p.card-text Made with love and in accordance with the newest technologies.
@@ -17,7 +18,8 @@ section.features.text-center#features
       .col-12.col-sm-6.col-lg-4
         .card.card-grey
           .card-img
-            i.fas.fa-tools.fa-5x
+            //- i.fas.fa-tools.fa-5x
+            img.svg-inline--fa.fa-5x#fa-tools(src="fonts/svgs/solid/tools.svg" alt="tools" inline)
           .card-body
             h4.card-title Audit
             p.card-text Examination of page performance to achieve your goals.
@@ -25,7 +27,8 @@ section.features.text-center#features
       .col-12.col-sm-6.col-lg-4
         .card.card-blue
           .card-img
-            i.fas.fa-medal.fa-5x
+            //- i.fas.fa-medal.fa-5x
+            img.svg-inline--fa.fa-5x#fa-medal(src="fonts/svgs/solid/medal.svg" alt="medal" inline)
           .card-body
             h4.card-title SEO Ready
             p.card-text Generate leads for your business through organic traffic.
@@ -33,7 +36,8 @@ section.features.text-center#features
       .col-12.col-sm-6.col-lg-4
         .card.card-grey
           .card-img
-            i.fas.fa-heartbeat.fa-5x
+            //- i.fas.fa-heartbeat.fa-5x
+            img.svg-inline--fa.fa-5x#fa-heartbeat(src="fonts/svgs/solid/heartbeat.svg" alt="heartbeat" inline)
           .card-body
             h4.card-title Best practices
             p.card-text Follow the best practices for modern web development.
@@ -41,7 +45,8 @@ section.features.text-center#features
       .col-12.col-sm-6.col-lg-4
         .card.card-green
           .card-img
-            i.fas.fa-universal-access.fa-5x
+            //- i.fas.fa-universal-access.fa-5x
+            img.svg-inline--fa.fa-5x#fa-universal-access(src="fonts/svgs/solid/universal-access.svg" alt="universal-access" inline)
           .card-body
             h4.card-title Accessibility
             p.card-text Provide equal access, no barriers that prevent interaction.
@@ -49,7 +54,8 @@ section.features.text-center#features
       .col-12.col-sm-6.col-lg-4
         .card.card-grey
           .card-img
-            i.fas.fa-desktop.fa-5x
+            //- i.fas.fa-desktop.fa-5x
+            img.svg-inline--fa.fa-5x#fa-desktop(src="fonts/svgs/solid/desktop.svg" alt="desktop" inline)
           .card-body
             h4.card-title Responsive
             p.card-text Make it look good on all devices, mobile-friendly.
