--- a/src/views/includes/sections/_marks.pug
+++ b/src/views/includes/sections/_marks.pug
@@ -4,11 +4,16 @@ section.marks.text-center#marks
   .container
     .row
       .col.col-sm-4
-        i.fas.fa-home.fa-5x
+        //- i.fas.fa-home.fa-5x
+        img.svg-inline--fa.fa-5x#fa-home(src="fonts/svgs/solid/home.svg" alt="home" inline)
         p.mb-0.mt-3 Oradea / Romania
+
       .col.col-sm-4
-        i.fas.fa-heartbeat.fa-5x
+        //- i.fas.fa-heartbeat.fa-5x
+        img.svg-inline--fa.fa-5x#fa-heartbeat(src="fonts/svgs/solid/heartbeat.svg" alt="heartbeat" inline)
         p.mb-0.mt-3 Chicago / USA
+
       .col.col-sm-4
-        i.fas.fa-map-marked-alt.fa-5x
+        //- i.fas.fa-map-marked-alt.fa-5x
+        img.svg-inline--fa.fa-5x#fa-map-marked(src="fonts/svgs/solid/map-marked-alt.svg" alt="map-marked" inline)
         p.mb-0.mt-3 London / UK
