--- a/src/views/modules/drawer/_drawer.pug
+++ b/src/views/modules/drawer/_drawer.pug
@@ -11,10 +11,11 @@ include ../../mixins/_drawer
             source(data-srcset="images/logo/logo-adorade-drawer.png" type="image/png")
             img.lazy-drawer.img-fluid(data-src="images/logo/logo-adorade-drawer.png" alt="Adorade")
         button.close(type="button" role="button" data-dismiss="drawer" aria-label="Close Drawer")
-          i.fas.fa-times
+          //- i.fas.fa-times
+          img.svg-inline--fa#fa-times(src="fonts/svgs/solid/times.svg" alt="times" inline)
 
       .drawer-body
-        ul.drawer-nav.mb-auto.mb-3.fa-ul
+        ul.drawer-nav.mb-auto.mb-3
           +drawerLink(menu)
           //- li.nav-item.active: a.nav-link(href="./") #[span.fa-li #[i.fas.fa-home.fa-fw]] Home
           //- li.nav-item: a.nav-link(href="#!") #[span.fa-li #[i.fas.fa-toolbox.fa-fw]] Services
