--- a/src/views/modules/footer/_footer-social.pug
+++ b/src/views/modules/footer/_footer-social.pug
@@ -2,16 +2,24 @@
 ul.footer-social-menu#menu-footer-social
   li.menu-item
     a(rel="noopener" target="_blank" href="https://www.facebook.com/Adorade" title="Facebook")
-      i.fab.fa-facebook-square.fa-fw.fa-2x
+      //- i.fab.fa-facebook-square.fa-fw.fa-2x
+      img.svg-inline--fa.fa-fw.fa-2x#fa-facebook(src="fonts/svgs/brands/facebook-square.svg" alt="facebook" inline)
+
   li.menu-item
     a(rel="noopener" target="_blank" href="https://m.me/Adorade" title="Messenger")
-      i.fab.fa-facebook-messenger.fa-fw.fa-2x
+      //- i.fab.fa-facebook-messenger.fa-fw.fa-2x
+      img.svg-inline--fa.fa-fw.fa-2x#fa-messenger(src="fonts/svgs/brands/facebook-messenger.svg" alt="messenger" inline)
+
   li.menu-item
     a(rel="noopener" target="_blank" href="https://github.com/adorade" title="GitHub")
-      i.fab.fa-github.fa-fw.fa-2x
+      //- i.fab.fa-github.fa-fw.fa-2x
+      img.svg-inline--fa.fa-fw.fa-2x#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
+
   li.menu-item
     a(rel="noopener" target="_blank" href="https://twitter.com/adorade" title="Twitter")
-      i.fab.fa-twitter.fa-fw.fa-2x
+      //- i.fab.fa-twitter.fa-fw.fa-2x
+      img.svg-inline--fa.fa-fw.fa-2x#fa-twitter(src="fonts/svgs/brands/twitter.svg" alt="twitter" inline)
+
   //- li.menu-item
   //-   a(rel="noopener" target="_blank" href="#!" title="WhatsApp")
   //-     i.fab.fa-whatsapp.fa-fw.fa-2x
