--- a/src/views/modules/navbar/_navbar.pug
+++ b/src/views/modules/navbar/_navbar.pug
@@ -4,5 +4,5 @@ nav.navbar.fixed-top.navbar-dark.bg-transparent
     button.navbar-toggler(
       type="button" role="button" data-toggle="drawer" data-target="#drawer"
       aria-controls="drawer" aria-expanded="false" aria-label="Toggle navigation")
-      i.fas.fa-bars.fa-1x
-    //- a.navbar-brand.invisible.ml-3(href="./") Adorade
+      //- i.fas.fa-bars.fa-1x
+      img.svg-inline--fa.fa-1x#fa-bars(src="fonts/svgs/solid/bars.svg" alt="Bars" inline)
