--- a/src/views/partials/_fonts.pug
+++ b/src/views/partials/_fonts.pug
@@ -6,5 +6,4 @@ else
   link#fonts-css(rel="stylesheet" href="fonts/fonts.css")
 
 //--- Load Font Awesome
-link(rel="preconnect" href="https://kit-free.fontawesome.com")
-script#load-font-aws-kit(defer src="https://kit.fontawesome.com/aec4506a79.js" crossorigin="anonymous")
+//- see fonts/fonts.css
