--- a/src/views/includes/misc/_back-to-top.pug
+++ b/src/views/includes/misc/_back-to-top.pug
@@ -2,5 +2,7 @@
 .back-to-top
   .back-to-top-icon.d-flex(aria-label="Go to top")
     //- span.sr-only Go to top
-    i.fas.fa-chevron-up.fa-fw
+    //- i.fas.fa-chevron-up.fa-fw
+    img.svg-inline--fa.fa-fw#fa-chevron-up(src="fonts/svgs/solid/chevron-up.svg" alt="Up" inline)
+    //- svg.svg-inline--fa.fa-fw#fa-chevron-up: use(xlink:href="fonts/sprites/solid.svg#chevron-up")
     .back-to-top-percent
