--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -15,7 +15,7 @@ html(lang="en" prefix="og: http://ogp.me/ns#")
     block styles
       include ../partials/_styles
     block head-js
-      include ../partials/_gtag
+      include ../partials/_analytics
 
   body
     main
