--- a/src/views/layout/_thanks.pug
+++ b/src/views/layout/_thanks.pug
@@ -23,7 +23,7 @@ html(lang="en")
         link#main-style(rel="stylesheet" href="../css/thanks.css" media="screen")
 
     block head-js
-      include ../partials/_gtag
+      include ../partials/_analytics
 
   body
     block content
