--- a/src/views/modules/footer/_footer-social.pug
+++ b/src/views/modules/footer/_footer-social.pug
@@ -1,31 +1,31 @@
 //- modules/footer/_footer-social.pug
 ul.footer-social-menu#menu-footer-social
   li.menu-item
-    a(rel="noopener" target="_blank" href="https://www.facebook.com/Adorade" title="Facebook")
+    a.outbound-link(rel="noopener" target="_blank" href="https://www.facebook.com/Adorade" aria-label="Facebook")
       //- i.fab.fa-facebook-square.fa-fw.fa-2x
       img.svg-inline--fa.fa-fw.fa-2x#fa-facebook(src="fonts/svgs/brands/facebook-square.svg" alt="facebook" inline)
 
   li.menu-item
-    a(rel="noopener" target="_blank" href="https://m.me/Adorade" title="Messenger")
+    a.outbound-link(rel="noopener" target="_blank" href="https://m.me/Adorade" aria-label="Messenger")
       //- i.fab.fa-facebook-messenger.fa-fw.fa-2x
       img.svg-inline--fa.fa-fw.fa-2x#fa-messenger(src="fonts/svgs/brands/facebook-messenger.svg" alt="messenger" inline)
 
   li.menu-item
-    a(rel="noopener" target="_blank" href="https://github.com/adorade" title="GitHub")
+    a.outbound-link(rel="noopener" target="_blank" href="https://github.com/adorade" aria-label="GitHub")
       //- i.fab.fa-github.fa-fw.fa-2x
       img.svg-inline--fa.fa-fw.fa-2x#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
 
   li.menu-item
-    a(rel="noopener" target="_blank" href="https://twitter.com/adorade" title="Twitter")
+    a.outbound-link(rel="noopener" target="_blank" href="https://twitter.com/adorade" aria-label="Twitter")
       //- i.fab.fa-twitter.fa-fw.fa-2x
       img.svg-inline--fa.fa-fw.fa-2x#fa-twitter(src="fonts/svgs/brands/twitter.svg" alt="twitter" inline)
 
   //- li.menu-item
-  //-   a(rel="noopener" target="_blank" href="#!" title="WhatsApp")
+  //-   a(rel="noopener" target="_blank" href="#!" aria-label="WhatsApp")
   //-     i.fab.fa-whatsapp.fa-fw.fa-2x
   //- li.menu-item
-  //-   a(rel="noopener" target="_blank" href="#!" title="Instagram")
+  //-   a(rel="noopener" target="_blank" href="#!" aria-label="Instagram")
   //-     i.fab.fa-instagram.fa-fw.fa-2x
   //- li.menu-item
-  //-   a(rel="noopener" target="_blank" href="#!" title="Pinterest")
+  //-   a(rel="noopener" target="_blank" href="#!" aria-label="Pinterest")
   //-     i.fab.fa-pinterest.fa-fw.fa-2x
