refactor(style): add theme color scheme

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,9 @@
 // Import Material Color Palette.
 @import "includes/colors";
 
+// Import Theme Color Scheme.
+@import "includes/theme-mode";
+
 @import "includes/variables";
 @import "includes/animation";
 
