--- a/src/views/includes/sections/_carousel.pug
+++ b/src/views/includes/sections/_carousel.pug
@@ -14,7 +14,7 @@ section.carousel-portfolio.text-center#carousel-portfolio
             li.active(data-target="#carouselPortfolio" data-slide-to="0")
             li(data-target="#carouselPortfolio" data-slide-to="1")
 
-          .carousel-inner
+          .carousel-inner.shadow-lg
             .carousel-item.active
               +carouselPicture("webmagia", "WebMagia")
             .carousel-item
