perf(color): add dark mode

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -44,8 +44,8 @@
 }
 
 .card-img-overlay {
-  opacity: inherit;
-  @include gradient-radial-circle(rgba(0, 0, 0, .3), rgba(0, 0, 0, .9));
+  // opacity: inherit;
+  @include gradient-radial-circle(rgba($black, .1), rgba($black, .7));
 }
 
 .card-d-flex {
