--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -4,5 +4,6 @@
 
 .contact,
 .marks {
-  background-color: $gray-800;
+  background-color: var(--body-background-color);
+  color: var(--text-color);
 }
