--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -8,8 +8,8 @@ body {
 }
 
 body {
-  background-color: $gray-800;
-  color: $gray-100;
+  background-color: var(--body-background-color);
+  color: var(--text-color);
 }
 
 img {
