--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -5,7 +5,7 @@
 form {
   padding: 0;
   margin: 0;
-  background-color: $gray-900;
+  background-color: var(--background-color-dark);
   font-family: Roboto, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
