--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -50,6 +50,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+    color: $grey-100;
     @include gradient-radial-circle(rgba($black, .1), rgba($black, .7));
 
     @media screen and (min-width: 768px) {
