--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -51,6 +51,7 @@
     margin: 0;
     background: $gray;
     background: rgba($gray, .5);
+    color: #f8f9fa;
     font-size: 1.5rem;
     text-align: center;
     transition: .5s;
