--- a/src/scss/components/_parallax.scss
+++ b/src/scss/components/_parallax.scss
@@ -43,6 +43,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  color: $gray-100;
   @include gradient-radial-circle(rgba($black, .1), rgba($black, .7));
 
   span {
