refactor(vendors): update vendors source files

--- a/src/views/partials/_styles.pug
+++ b/src/views/partials/_styles.pug
@@ -20,6 +20,7 @@ block external-css
   //-   link#animate-css(
   //-     rel="stylesheet" href="css/vendor/animate.min.css")
 
+block vendors-css
   //--- Vendors main CSS
   if entry.inline
     link#inline-vendors-css(
