--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -9,12 +9,13 @@ body {
 }
 
 // stylelint-disable
-html.color-theme-in-transition,
-html.color-theme-in-transition *,
-html.color-theme-in-transition *::before,
-html.color-theme-in-transition *::after {
-  transition: all 500ms !important;
-  transition-delay: 0ms !important;
+html {
+  &.color-theme-in-transition,
+  &.color-theme-in-transition *,
+  &.color-theme-in-transition *::before,
+  &.color-theme-in-transition *::after {
+    transition: all .5s ease-in-out !important;
+  }
 }
 // stylelint-enable
 
