--- a/src/scss/unikorn/components/_badge.scss
+++ b/src/scss/unikorn/components/_badge.scss
@@ -1,6 +1,6 @@
 //
 // Badge
-// ============================================================================
+// =============================================================================
 
 // Base class
 // ----------------------------
@@ -19,7 +19,7 @@
   @include transition($badge-transition);
 
   @at-root a#{&} {
-    @include hover-focus {
+    @include hover-focus() {
       text-decoration: none;
     }
   }
