--- a/src/scss/unikorn/components/_button-group.scss
+++ b/src/scss/unikorn/components/_button-group.scss
@@ -1,6 +1,6 @@
 //
 // Button-group
-// ============================================================================
+// =============================================================================
 // stylelint-disable selector-no-qualifying-type
 
 // Base styles
@@ -18,7 +18,7 @@
 
     // Bring the hover, focused, and "active" buttons to the front to overlay
     // the borders properly
-    @include hover {
+    @include hover() {
       z-index: 1;
     }
 
