--- a/src/scss/unikorn/content/_code.scss
+++ b/src/scss/unikorn/content/_code.scss
@@ -1,12 +1,12 @@
 //
 // Code (inline and block)
-// ============================================================================
+// =============================================================================
 
 // Inline code
 code {
   color: $code-color;
   font-size: $code-font-size;
-  word-break: break-word;
+  word-wrap: break-word;
 
   // Streamline the style when inside anchors to avoid broken underline and more
   a > & {
