--- a/src/scss/unikorn/globals/_custom.scss
+++ b/src/scss/unikorn/globals/_custom.scss
@@ -1,9 +1,12 @@
 //
 // UniKorn overrides
-// ============================================================================
+// =============================================================================
 // Copy variables from `_variables.scss` to this file to override default values
 // without modifying source files.
 //
 // Heads up! Don't forget to remove default! flag from variables value.
 // Optionally override the defaults before its inclusion
-// http://getbootstrap.com/docs/4.0/getting-started/theming/#variable-defaults
+
+// Your variable overrides
+// $body-bg: #000;
+// $body-color: #111;
