--- a/src/scss/unikorn/mixins/_background-variant.scss
+++ b/src/scss/unikorn/mixins/_background-variant.scss
@@ -1,6 +1,6 @@
 //
 // Mixins - Background variant
-// ============================================================================
+// =============================================================================
 // stylelint-disable declaration-no-important
 
 // Contextual backgrounds.
@@ -11,7 +11,7 @@
   }
   a#{$parent},
   button#{$parent} {
-    @include hover-focus {
+    @include hover-focus() {
       background-color: darken($color, 10%) !important;
     }
   }
