--- a/src/scss/unikorn/mixins/_image.scss
+++ b/src/scss/unikorn/mixins/_image.scss
@@ -1,11 +1,11 @@
 //
 // Mixins - Image
-// ============================================================================
+// =============================================================================
 
 // Responsive image
 //
 // Keep images from scaling beyond the width of their parents.
-@mixin img-fluid {
+@mixin img-fluid() {
   // Part 1: Set a maximum relative to the parent
   max-width: 100%;
 
