--- a/src/scss/unikorn/mixins/_list-group.scss
+++ b/src/scss/unikorn/mixins/_list-group.scss
@@ -1,6 +1,6 @@
 //
 // Mixins - List group
-// ============================================================================
+// =============================================================================
 
 // List group item variants.
 // Use contextual classes to style list items with a stateful background and color.
@@ -10,7 +10,7 @@
     color: $color;
 
     &.list-group-item-action {
-      @include hover-focus {
+      @include hover-focus() {
         background-color: darken($background, 5%);
         color: $color;
       }
