--- a/src/scss/unikorn/mixins/_table-row.scss
+++ b/src/scss/unikorn/mixins/_table-row.scss
@@ -1,6 +1,6 @@
 //
 // Mixins - Table-row
-// ============================================================================
+// =============================================================================
 
 // Table row variants
 // Use contextual classes to style table row with a stateful background and color.
@@ -30,7 +30,7 @@
     $hover-background: darken($background, 5%);
 
     .table-#{$state} {
-      @include hover {
+      @include hover() {
         background-color: $hover-background;
 
         > td,
