--- a/src/scss/unikorn/mixins/_text-emphasis.scss
+++ b/src/scss/unikorn/mixins/_text-emphasis.scss
@@ -1,6 +1,6 @@
 //
 // Mixins - Text emphasis
-// ============================================================================
+// =============================================================================
 // stylelint-disable declaration-no-important
 // Typography
 
@@ -11,7 +11,7 @@
   }
   @if $emphasized-link-hover-darken-percentage != 0 {
     a#{$parent} {
-      @include hover-focus {
+      @include hover-focus() {
         color: darken($color, $emphasized-link-hover-darken-percentage) !important;
       }
     }
