--- a/src/views/modules/navbar/_navbar.pug
+++ b/src/views/modules/navbar/_navbar.pug
@@ -16,7 +16,7 @@ nav.navbar.fixed-top.navbar-dark.bg-transparent
 
     .dropdown-menu.dropdown-menu-right.p-3#theme-menu(role="menu" aria-labelledby="dropdownThemeButton")
       .btn-group.btn-group-toggle(data-toggle="buttons")
-        label.btn.btn-dark.active Dark
-          input.input-dark(type="radio" name="color" value="dark" autocomplete="off" aria-label="Dark Theme" checked)
+        label.btn.btn-dark Dark
+          input.input-dark(type="radio" name="color" value="dark" autocomplete="off" aria-label="Dark Theme")
         label.btn.btn-dark Light
           input.input-light(type="radio" name="color" value="light" autocomplete="off" aria-label="Light Theme")
