chore(pages): fix link for UniKorn

--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -11,11 +11,13 @@ section.portfolio#portfolio-1
         p.mb-0 Frontend framework for designing websites and web applications.
         p.mb-4.font-weight-bold #node #yarn #git #gulp #scss #es6 #pug
         .buttons-wrapper
-          a.btn.btn-info.mr-2.outbound-link(href="https://uni.adorade.ro/" aria-label="UniKorn online")
+          a.btn.btn-info.mr-2.outbound-link(
+            href="https://uni.adorade.ro/" rel="noopener" target="_blank" aria-label="UniKorn online")
             //- i.fas.fa-external-link-alt.mr-2
             img.svg-inline--fa.mr-2#fa-external-link(src="fonts/svgs/solid/external-link-alt.svg" alt="external-link" inline)
             span.font-weight-bold Online
-          a.btn.btn-light.outbound-link(href="https://github.com/adorade/unikorn" aria-label="UniKorn github")
+          a.btn.btn-light.outbound-link(
+            href="https://github.com/adorade/unikorn" rel="noopener" target="_blank" aria-label="UniKorn github")
             //- i.fab.fa-github.mr-2
             img.svg-inline--fa.mr-2#fa-github(src="fonts/svgs/brands/github.svg" alt="github" inline)
             span.font-weight-bold GitHub
