fix(wai): remove `role=menu` from toggle settings

--- a/src/views/modules/navbar/_navbar.pug
+++ b/src/views/modules/navbar/_navbar.pug
@@ -9,7 +9,7 @@ nav.navbar.fixed-top.navbar-dark.bg-transparent
 
   .dropdown.theme-settings
     button.navbar-toggler.text-light.border-0#dropdownThemeButton(
-      type="button" role="menu" data-toggle="dropdown"
+      type="button" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false" aria-label="Toggle settings")
       //- i.fas.fa-adjust.fa-1x
       img.svg-inline--fa.fa-1x#fa-adjust(src="fonts/svgs/solid/adjust.svg" alt="Settings" inline)
