--- a/src/views/partials/_fonts.pug
+++ b/src/views/partials/_fonts.pug
@@ -1,7 +1,7 @@
 //- partials/_fonts.pug
 //--- Load Google Fonts
 if entry.inline
-  link#inline-fonts-css(rel="stylesheet" href="fonts/fonts.css" inline)
+  link#inline-fonts-css(rel="stylesheet" href="fonts/fonts.css" nonce="R4nd0m" inline)
 else
   link#fonts-css(rel="stylesheet" href="fonts/fonts.css")
 
